Ongoing development - Actor System being constructed

--- a/src/Thuria.Helium.Akka.Tests/Thuria.Helium.Akka.Tests.csproj
+++ b/src/Thuria.Helium.Akka.Tests/Thuria.Helium.Akka.Tests.csproj
@@ -11,9 +11,11 @@
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="Thuria.Calot.TestUtilities" Version="0.0.4-beta" />
-    <PackageReference Include="Thuria.Zitidar.Akka" Version="0.0.10-beta" />
-    <PackageReference Include="Thuria.Zitidar.Core" Version="0.0.10-beta" />
+    <PackageReference Include="Thuria.Calot.TestUtilities" Version="0.0.5-beta" />
+    <PackageReference Include="Thuria.Thark.DataModel" Version="0.0.2" />
+    <PackageReference Include="Thuria.Thark.StatementBuilder" Version="0.0.2" />
+    <PackageReference Include="Thuria.Zitidar.Akka" Version="0.0.11-beta" />
+    <PackageReference Include="Thuria.Zitidar.Core" Version="0.0.11-beta" />
   </ItemGroup>
 
   <ItemGroup>
