--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thuria.helium",
   "version": "0.0.1",
-  "description": "Thuria Zitidar",
+  "description": "Thuria Helium",
   "main": "index.js",
   "scripts": {
     "build": "gulp4 build-all",
@@ -25,12 +25,16 @@
   },
   "homepage": "https://github.com/DracoRSA/Thuria.Helium#readme",
   "devDependencies": {
+    "child_process": "^1.0.2",
     "cli-color": "^1.3.0",
     "gulp-clean": "^0.4.0",
     "gulp-dotnet-cli": "^1.1.0",
     "gulp-filter": "^5.1.0",
     "gulp4": "^4.0.2",
-    "yamljs": "^0.3.0"
+    "stream": "0.0.2",
+    "through2": "^2.0.3",
+    "yamljs": "^0.3.0",
+    "yargs": "^12.0.2"
   },
   "dependencies": {
     "npm": "^6.4.1"
