--- a/src/Thuria.Helium.Akka/Thuria.Helium.Akka.csproj
+++ b/src/Thuria.Helium.Akka/Thuria.Helium.Akka.csproj
@@ -12,8 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Thuria.Zitidar.Akka" Version="0.0.10-beta" />
-    <PackageReference Include="Thuria.Zitidar.Core" Version="0.0.10-beta" />
+    <PackageReference Include="Thuria.Thark.DataModel" Version="0.0.2" />
+    <PackageReference Include="Thuria.Thark.StatementBuilder" Version="0.0.2" />
+    <PackageReference Include="Thuria.Zitidar.Akka" Version="0.0.11-beta" />
+    <PackageReference Include="Thuria.Zitidar.Core" Version="0.0.11-beta" />
   </ItemGroup>
 
   <ItemGroup>
