--- a/src/Thuria.Helium.Akka.Tests/Thuria.Helium.Akka.Tests.csproj
+++ b/src/Thuria.Helium.Akka.Tests/Thuria.Helium.Akka.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
@@ -11,11 +11,11 @@
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="Thuria.Calot.TestUtilities" Version="0.0.5-beta" />
-    <PackageReference Include="Thuria.Thark.DataModel" Version="0.0.2" />
-    <PackageReference Include="Thuria.Thark.StatementBuilder" Version="0.0.2" />
-    <PackageReference Include="Thuria.Zitidar.Akka" Version="0.0.11-beta" />
-    <PackageReference Include="Thuria.Zitidar.Core" Version="0.0.13" />
+    <PackageReference Include="Thuria.Calot.TestUtilities" Version="0.0.7-beta" />
+    <PackageReference Include="Thuria.Thark.DataModel" Version="0.0.5-beta" />
+    <PackageReference Include="Thuria.Thark.StatementBuilder" Version="0.0.5-beta" />
+    <PackageReference Include="Thuria.Zitidar.Akka" Version="0.0.14-beta" />
+    <PackageReference Include="Thuria.Zitidar.Core" Version="0.0.17-beta" />
   </ItemGroup>
 
   <ItemGroup>
