--- a/.buildSettings.yml
+++ b/.buildSettings.yml
@@ -11,6 +11,11 @@ NUGETPACKAGES:
     Version: 0.0.1
     Location: src/Thuria.Helium.Akka
     IsBeta: true
+  - HeliumAkkaNancy:
+    Name: Helium.Akka.Nancy
+    Version: 0.0.1
+    Location: src/Thuria.Helium.Akka.Nancy
+    IsBeta: true
   - HeliumAkkaStructuremap:
     Name: Helium.Akka.Structuremap
     Version: 0.0.1
