--- a/src/Thuria.Helium.Akka.Nancy/Thuria.Helium.Akka.Nancy.csproj
+++ b/src/Thuria.Helium.Akka.Nancy/Thuria.Helium.Akka.Nancy.csproj
@@ -20,7 +20,15 @@
 
   <ItemGroup>
     <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
+    <PackageReference Include="Thuria.Zitidar.Akka" Version="0.0.14-beta" />
     <PackageReference Include="Thuria.Zitidar.Core" Version="0.0.17-beta" />
+    <PackageReference Include="Thuria.Zitidar.Nancy" Version="0.0.6-beta" />
+    <PackageReference Include="Thuria.Zitidar.Serialization.Nancy" Version="0.0.2-beta" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Thuria.Helium.Akka.Core\Thuria.Helium.Akka.Core.csproj" />
+    <ProjectReference Include="..\Thuria.Helium.Core\Thuria.Helium.Core.csproj" />
   </ItemGroup>
 
 </Project>
