Added additional tests

--- a/src/Thuria.Helium.Akka.Tests/Thuria.Helium.Akka.Tests.csproj
+++ b/src/Thuria.Helium.Akka.Tests/Thuria.Helium.Akka.Tests.csproj
@@ -7,19 +7,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Akka.TestKit.NUnit3" Version="1.3.8" />
     <PackageReference Include="NSubstitute" Version="3.1.0" />
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="Thuria.Calot.TestUtilities" Version="0.0.7-beta" />
+    <PackageReference Include="Thuria.Calot.TestUtilities" Version="0.0.8-beta" />
     <PackageReference Include="Thuria.Thark.DataModel" Version="0.0.6-beta" />
     <PackageReference Include="Thuria.Thark.StatementBuilder" Version="0.0.6-beta" />
     <PackageReference Include="Thuria.Zitidar.Akka" Version="0.0.14-beta" />
     <PackageReference Include="Thuria.Zitidar.Core" Version="0.0.17-beta" />
+    <PackageReference Include="Thuria.Zitidar.Structuremap" Version="0.0.14-beta" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Thuria.Helium.Akka\Thuria.Helium.Akka.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="akka.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
