--- a/src/Thuria.Helium.Akka.Tests/Thuria.Helium.Akka.Tests.csproj
+++ b/src/Thuria.Helium.Akka.Tests/Thuria.Helium.Akka.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Akka.DI.TestKit" Version="1.3.10" />
     <PackageReference Include="Akka.TestKit.NUnit3" Version="1.3.8" />
     <PackageReference Include="NSubstitute" Version="3.1.0" />
     <PackageReference Include="NUnit" Version="3.11.0" />
