--- a/src/Thuria.Helium.Akka.Nancy.Tests/Thuria.Helium.Akka.Nancy.Tests.csproj
+++ b/src/Thuria.Helium.Akka.Nancy.Tests/Thuria.Helium.Akka.Nancy.Tests.csproj
@@ -7,9 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Nancy.Testing" Version="2.0.0-clinteastwood" />
     <PackageReference Include="NSubstitute" Version="3.1.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
     <PackageReference Include="Thuria.Calot.TestUtilities" Version="0.0.8-beta" />
+    <PackageReference Include="Thuria.Zitidar.Nancy" Version="0.0.6-beta" />
+    <PackageReference Include="Thuria.Zitidar.Structuremap" Version="0.0.14-beta" />
   </ItemGroup>
 
   <ItemGroup>
