--- a/src/Thuria.Helium.Akka.Tests/Thuria.Helium.Akka.Tests.csproj
+++ b/src/Thuria.Helium.Akka.Tests/Thuria.Helium.Akka.Tests.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="akka.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="akka.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Akka.DI.TestKit" Version="1.3.10" />
     <PackageReference Include="Akka.TestKit.NUnit3" Version="1.3.8" />
     <PackageReference Include="NSubstitute" Version="3.1.0" />
@@ -23,12 +33,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Thuria.Helium.Akka\Thuria.Helium.Akka.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="akka.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
